# loggey

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  Loggey.cpp  Loggey.hpp  README.md  Readthiszay  SECURITY.md
.github/: FUNDING.yml
.github/workflows/: checkmarx-analysis.yml  codacy-analysis.yml  codeql-analysis.yml
example/: Example1.cpp
include/: Loggey.hpp
